add components in App using Clayui

--- a/react-app/package.json
+++ b/react-app/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@clayui/button": "^3.40.0",
+    "@clayui/card": "^3.52.0",
+    "@clayui/form": "^3.52.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
